--- a/plugin_src/manifest.json
+++ b/plugin_src/manifest.json
@@ -5,13 +5,14 @@
 "description": "The first extension that I made.",
 "browser_action": {
 "default_icon": "icon.png",
-"default_popup": "popup.html" 
+"default_popup": "popup.html"
 },
 "background": {
     "page": "popup.html"
 },
 "permissions": [
     "cookies",
-    "http://*.shanbay.com/*"
+    "http://*.shanbay.com/*",
+	"tabs"
 ]
 }
