--- a/plugin_src/manifest.json
+++ b/plugin_src/manifest.json
@@ -1,8 +1,8 @@
 {
-"name": "My First Extension",
+"name": "AddWord",
 "version": "0.0.0.1",
 "manifest_version": 2,
-"description": "The first extension that I made.",
+"description": "add wordbook to shanbay.com.",
 "browser_action": {
 "default_icon": "icon.png",
 "default_popup": "popup.html"
